src/components/roulletSection/Roullet-section.css
.roullet-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.roullet-section__winner {
  display: block;
  max-width: 25rem;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: center;
  font-weight: 800;
  font-size: 25px;
  color: #5b71bd;
}

.roullet-section__roullet {
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background-color: rgba(192, 206, 194, 0.2);
  opacity: 90%;
  position: relative;
}

.start-button {
  width: 5.5rem;
  height: 5.5rem;
  background-color: white;
  border-radius: 50%;
  border: none;
  box-shadow: 10px 5px 5px rgba(63, 63, 63, 0.2);
  cursor: pointer;
  font-weight: 600;
  position: absolute;
  font-size: 16px;
}

.start-button:active {
  margin-left: 3px;
  margin-top: 3px;
  box-shadow: none;
}

.roullet-arrow {
  position: absolute;
  top: -5px;
}

h1 {
  margin: 0;
  color: #557afe;
  font-weight: 400;
  font-size: 30px;
}

